--- a/sandman/corinthian/src/main/res/layout/corinthian_item_network_entry.xml
+++ b/sandman/corinthian/src/main/res/layout/corinthian_item_network_entry.xml
@@ -105,21 +105,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/sandman_ic_down"
-        tools:visibility="invisible" />
-
-    <androidx.appcompat.widget.AppCompatCheckBox
-        android:id="@+id/net_entry_checkbox"
-        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:gravity="center"
-        android:buttonTint="@color/text_highlight"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+        app:srcCompat="@drawable/sandman_ic_down" />
 
     <View
         android:layout_width="0dp"
