--- a/sandman/lucien/src/main/res/layout/lucien_activity_crash.xml
+++ b/sandman/lucien/src/main/res/layout/lucien_activity_crash.xml
@@ -5,7 +5,7 @@
     android:id="@+id/crash_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutDescription="@xml/cain_activity_crash_scene">
+    app:layoutDescription="@xml/lucien_activity_crash_scene">
 
     <ScrollView
         android:id="@+id/crash_scroll_view"
@@ -16,21 +16,70 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/crash_background">
 
-        <HorizontalScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/crash_stacktrace"
+                android:id="@+id/crash_stacktrace_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:foreground="?selectableItemBackground"
                 android:padding="10dp"
-                android:textColor="@color/text_title"
-                android:textSize="12sp"
-                app:fontFamily="@font/courier_regular"
-                tools:text="stacktrace" />
+                android:text="Stacktrace"
+                android:textColor="@color/text_hyperlink"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </HorizontalScrollView>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/crash_timeline_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:foreground="?selectableItemBackground"
+                android:padding="10dp"
+                android:text="Timeline"
+                android:textColor="@color/text_hyperlink"
+                app:layout_constraintStart_toEndOf="@id/crash_stacktrace_button"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/crash_stacktrace_button">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/crash_stacktrace"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textColor="@color/text_title"
+                        android:textSize="12sp"
+                        android:visibility="visible"
+                        app:fontFamily="@font/courier_regular"
+                        tools:text="stacktrace" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/crash_timeline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:textColor="@color/text_title"
+                        android:textSize="12sp"
+                        android:visibility="gone"
+                        app:fontFamily="@font/courier_regular"
+                        tools:text="timeline" />
+
+                </FrameLayout>
+
+            </HorizontalScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
