--- a/content/common/src/main/res/values/bigbrother_styles.xml
+++ b/content/common/src/main/res/values/bigbrother_styles.xml
@@ -10,6 +10,8 @@
         <item name="colorSecondaryVariant">@color/co_brand_secondary</item>
         <item name="colorOnSecondary">@android:color/black</item>
 
+        <item name="android:windowBackground">@color/oceania_background</item>
+
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
