--- a/content/report/src/main/res/layout/bigbrother_fragment_session.xml
+++ b/content/report/src/main/res/layout/bigbrother_fragment_session.xml
@@ -21,15 +21,29 @@
                 style="@style/SearchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="10dp">
+                android:layout_marginEnd="50dp"
+                android:paddingHorizontal="10dp"
+                app:endIconDrawable="@drawable/bigbrother_ic_cancel">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/net_search_view"
+                    android:id="@+id/session_search_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/report_session_search_hint" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/session_edit_date"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical|end"
+                android:foreground="?selectableItemBackground"
+                android:padding="12dp"
+                app:srcCompat="@drawable/bigbrother_ic_calendar_edit"
+                app:tint="?colorPrimary" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
