--- a/content/report/src/main/res/values/bigbrother_strings.xml
+++ b/content/report/src/main/res/values/bigbrother_strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="report_session_search_hint">Search by name, status or date</string>
+    <string name="report_session_search_hint">Date</string>
     <string name="report_session_session">Session %d</string>
 </resources>
