--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -218,6 +218,14 @@
                 android:text="@string/custom_page_activity_button"
                 app:layout_constraintTop_toBottomOf="@id/out_of_domain"/>
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/compose_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="@string/compose_activity_button"
+                app:layout_constraintTop_toBottomOf="@id/custom_page"/>
+
         </br.com.mrocigno.bigbrother.ui.GroupLayout>
 
     </LinearLayout>
